--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     width:auto;
     height:auto;
     /* border: 2px red solid; */
+    background-color: rgb(240, 232, 222);
 }
 
 #title{
@@ -26,6 +27,7 @@
 .image-tiles{
     width: 100px;
     height: 100px;
+    border-radius: 5px;
 }
 
 #tiles-container{
@@ -65,7 +67,7 @@ from{
     transform: rotateY(0deg);
 }
 to{
-    transform: rotateY(180deg);
+    transform: rotateY(360deg);
 }
 }
 
@@ -88,8 +90,8 @@ to{
     pointer-events: none;
 }
 
-.result{
-    background-color: rgba(239, 224, 179, 0.726);
+.result, .startup{
+    background-color: rgba(239, 224, 179, 0.865);
     position: relative;
     top:-350px;
     left: 00px;
@@ -103,7 +105,7 @@ to{
     border: 2px rgb(240, 186, 27) solid;
 }
 
-.play-again{
+.play-again, .game{
     margin: 10px;
     border-radius: 5px;
     border: 2px rgb(240, 186, 27) solid; 
@@ -128,7 +130,7 @@ to{
     /* display: none; */
 }
 
-.play-again:active .reset-again:active{
+.play-again:active, .reset-again:active, .game:active{
     animation-name: bounce;
     animation-duration: 0.5s;
 }
@@ -138,3 +140,10 @@ to{
     transform: scale(0.9);
 }
 }
+
+.game-instructions {
+    font-size: 20px;
+    color: rgba(61, 46, 2, 0.968);
+    text-align: center;
+}
+
